# knotdrop

./: .gitmodules  CMakeLists.txt  LEGAL  LICENSE  LINUX.md  README.md
include/: flowdrop.h  flowdrop.hpp
include/flowdrop/: flowdrop.hpp
redist/: README.md
src/: cbridge.cpp  core.cpp  core.h  device_info.cpp  discovery.cpp  discovery.hpp  libarchive.h  logger.cpp  logger.h  os_util.cpp  os_util.h  pipe.cpp  pipe.hpp  portroller.cpp  portroller.hpp  receiver.cpp  send_request.cpp  sender.cpp  server.cpp  specification.h  specification.hpp  static_libs.hpp
src/dns_sd/: dns_sd_wrapper.hpp  dns_sd_wrapper_apple.cpp  dns_sd_wrapper_avahi.cpp  dns_sd_wrapper_linux.cpp  dns_sd_wrapper_win_mac.cpp
src/knotport/: knotport.c  knotport.h
src/os/: experimental_socket.cpp  experimental_socket.h  file_info.c  file_info.cpp  file_info.h
